<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.fragments.tradingmarket.botomsheet.TradingMarketBottomSheet">

    <TextView
        android:id="@+id/currency_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="Currency"
        android:textColor="@color/darker"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/currency_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/currency_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/usd_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/usd_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_usd" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/eur_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_eur" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/jpy_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_jpy" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gbp_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_gbp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/aud_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_aud" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cad_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_cad" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chf_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_chf" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cny_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_cny" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sgd_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_sgd" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/kwr_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_jpy" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/krw_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_krw" />


            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/order_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="Order"
        android:textColor="@color/darker"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_scrollView" />

    <HorizontalScrollView
        android:id="@+id/order_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/order_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/marketCapAsc_order"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/marketCapAsc_order"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_cap_asc" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/marketCapDesc_order"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_cap_desc" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/NameAsc_order"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_asc" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/NameDesc_order"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_desc" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>